feat: Implement secure Weather & Vibe feature E2E

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>Kickadoor - רשת חברתית לכדורגל שכונתי</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Google Maps API Key (Client-side SDK key for displaying maps) -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5c1N3OL-MH7XavrOKjH5EbSdieyi7Dd0"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
